--- a/DeweyDecimal_Latest/SortingGame.resx
+++ b/DeweyDecimal_Latest/SortingGame.resx
@@ -8198,4 +8198,7 @@
         xYoVK1asWLFixYoVK1asWLFixYoVK1asWLFiDebaZpv/D55eCbjQVGuEAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="game_timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>172, 17</value>
+  </metadata>
 </root>
