--- a/DeweyDecimal_Latest/Properties/Resources.resx
+++ b/DeweyDecimal_Latest/Properties/Resources.resx
@@ -163,4 +163,31 @@
   <data name="lives" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lives.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="blue_elipse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blue_elipse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="orange_ellipse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\orange_ellipse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="purple_ellipse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\purple_ellipse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="exit_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exit_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="exit_ellipse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exit_ellipse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="home_button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\home_button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Adventure" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Adventure.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="pink_ellipse" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pink_ellipse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ReadyButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ReadyButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
