--- a/DeweyDecimal_Latest/Properties/Resources.resx
+++ b/DeweyDecimal_Latest/Properties/Resources.resx
@@ -184,10 +184,37 @@
   <data name="Adventure" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Adventure.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="BackgroundImage_FinalGame" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BackgroundImage_FinalGame.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="FindingCallNumsBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FindingCallNumsBackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pink_ellipse" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pink_ellipse.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ReadyButton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ReadyButton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dewey_file_path" xml:space="preserve">
+    <value>DDResources\\DeweyDecimalValues.csv</value>
+  </data>
+  <data name="file_path" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\file_path.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Scroll" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Scroll.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ScrollWithText" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ScrollWithText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scrollWithTextFinal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scrollWithTextFinal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GameOverSplash" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GameOverSplash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gameWin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gameWin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
